--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ exclude = '''
 )/
 '''
 
-[tool.flake8]
+[tool.ruff.lint]
 ignore = [
     'E402',  # module level import not at top of file
     'F401',  # imported but unused
