WIP Add module about clustering

--- a/jupyter-book/_toc.yml
+++ b/jupyter-book/_toc.yml
@@ -236,3 +236,9 @@ parts:
   chapters:
   - file: python_scripts/dev_features_importance
   - file: interpretation/interpretation_quiz
+- caption: 🚧 Clustering
+  chapters:
+  - file: python_scripts/clustering_kmeans
+  - file: python_scripts/clustering_kmeans_ex_01
+  - file: python_scripts/clustering_kmeans_sol_01
+  - file: python_scripts/clustering_supervised_metrics
