Add notebooks on hdbscan and feature engineering

--- a/jupyter-book/_toc.yml
+++ b/jupyter-book/_toc.yml
@@ -242,3 +242,5 @@ parts:
   - file: python_scripts/clustering_kmeans_ex_01
   - file: python_scripts/clustering_kmeans_sol_01
   - file: python_scripts/clustering_supervised_metrics
+  - file: python_scripts/clustering_hdbscan
+  - file: python_scripts/clustering_transformer
