Add exercise and solution using AMI

--- a/jupyter-book/_toc.yml
+++ b/jupyter-book/_toc.yml
@@ -242,5 +242,7 @@ parts:
   - file: python_scripts/clustering_ex_01
   - file: python_scripts/clustering_sol_01
   - file: python_scripts/clustering_supervised_metrics
+  - file: python_scripts/clustering_ex_02
+  - file: python_scripts/clustering_sol_02
   - file: python_scripts/clustering_hdbscan
   - file: python_scripts/clustering_transformer
