Add first quiz on clustering and related images

--- a/jupyter-book/_toc.yml
+++ b/jupyter-book/_toc.yml
@@ -247,6 +247,7 @@ parts:
     - file: python_scripts/clustering_supervised_metrics
     - file: python_scripts/clustering_ex_02
     - file: python_scripts/clustering_sol_02
+    - file: clustering/clustering_quiz_m4_01
   - file: clustering/clustering_assumptions_index
     sections:
     - file: python_scripts/clustering_hdbscan
