Add wrap-up quiz to toc

--- a/jupyter-book/_toc.yml
+++ b/jupyter-book/_toc.yml
@@ -252,4 +252,5 @@ parts:
     sections:
     - file: python_scripts/clustering_hdbscan
     - file: python_scripts/clustering_transformer
+  - file: clustering/clustering_wrap_up_quiz
   - file: clustering/clustering_module_take_away
