--- a/environment-dev.yml
+++ b/environment-dev.yml
@@ -2,6 +2,7 @@ name: scikit-learn-course
 channels:
   - conda-forge
 dependencies:
+  - python=3.11
   - scikit-learn >= 1.8
   - pandas >= 1
   - matplotlib-base
